styles/ln-pp.css
/* ... */
@media (max-width: 750px) {

    .main-content {
        padding: 48px;
        padding-top: 80px;
    }

}

@media (max-width: 540px) {

    .main-content {
        padding: 48px;
    }
    
    h1 {
        margin-top: 24px;
        font-size: 52px;
    }

}   

/* Small mobile styles */
@media (max-width: 490px) {
    
    .header-content {
        height: 80px;
    }
    
    .header-inner {
        padding-left: 16px;
        padding-right: 16px;
    }

    .header-title {
        display: none;
    }

    .profile-btn {
        width: 40px;
        height: 40px;
        box-shadow: 0 0 0 2px #2A3647;
        font-size: 12px;
    }

    .profile-btn.single-initial {
        font-size: 16px;
    }

    .main-content {
        margin-left: 16px;
        margin-right: 16px;
        margin-bottom: 80px;
    }


    .side-menu {
        display: flex;
        justify-content: center;
        height: 80px;
    }

    .menu-section {
        flex-direction: row;
        justify-content: space-between;
        flex-grow: 0;
        font-size: 16px;
        padding: 0 8px;
        width: 100%;
        max-width: 400px;
    }

    .menu-item {
        padding: 16px 8px;
        margin: 0;
        min-width: 48px;
        width: 80px !important;
        font-size: 14px;
        line-height: 1.2;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        flex-direction: column;
        gap: 8px;
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .menu-bottom {
        width: 104px !important;
    }

    .menu-item:hover {
        background-color: #091931;
        color: white;
    }

    .menu-item.active:hover {
        background-color: #091931;
    }


    .profile-container {
        right: 8px;
    }

    .profile-dropdown {
        top: 60px;
        right: -8px;
        background-color: #2A3647;
        border-radius: 20px 0 20px 20px;
        padding: 8px;
        min-width: 150px;
        width: auto;
        text-align: start;
        z-index: 99999;
        display: flex;
        flex-direction: column;
        justify-content: space-evenly;
        transform: translateX(100%);
        opacity: 0;
        visibility: hidden;
        transition: transform 0.125s ease-in-out, opacity 0.125s ease-in-out, visibility 0.125s ease-in-out;
    }

    .profile-dropdown.show {
        transform: translateX(0);
        opacity: 1;
        visibility: visible;
    }
    
    h1 {
        font-size: 47px;
        font-weight: 700;
        margin-bottom: 30px;
    }
    
    h2 {
        font-size: 27px;
        font-weight: 700;
        margin-bottom: 16px;
    }
    
    h3 {
        font-size: 20px;
        font-weight: 700;
    }

    .back-button {
        width: 38px;
        height: 38px;
    }

    .back-button img {
        height: 32px;
        width: 32px;
    }
}

@media (max-width: 450px) {

    .main-content {
        padding: 0px;
        padding-top: 48px;
    }

    .notice-side-menu {
        gap: 8px;
    }
}

@media (max-width: 370px) {

    h1 {
        font-size: 40px;
    }

    .notice-side-menu {
        gap: 2px;
        padding-left: 0px !important;
    }
}

